erDiagram
    wr_categories {
        varchar name
        varchar image
        timestamp created_at
        timestamp updated_at
        bigint id
    }
    wr_customers {
        varchar name
        varchar email
        varchar password
        timestamp created_at
        timestamp updated_at
        bigint id
    }
    wr_package_prices {
        bigint package_id
        bigint subscription_period_id
        varchar name
        varchar description
        int sequence
        varchar payment_interval
        decimal price
        timestamp created_at
        timestamp updated_at
        bigint id
    }
    wr_packages {
        bigint id PK
        varchar name
        varchar description
        longtext content
        int sequence
        json features
        timestamp created_at
        timestamp updated_at
    }
    wr_source_codes {
        bigint id PK
        varchar name
        varchar slug
        text caddy_template
        text setup_command
        timestamp created_at
        timestamp updated_at
    }
    wr_subscription_periods {
        bigint id PK
        varchar name
        varchar interval_value "ISO 8601 duration format: P1D, P1W, P1M, P3M, P1Y"
        int sequence
        timestamp created_at
        timestamp updated_at
    }
    wr_subscriptions {
        bigint id PK
        bigint customer_id
        bigint theme_id
        bigint package_id
        bigint package_price_id
        bigint subscription_period_id
        varchar name
        decimal commit_price
        varchar payment_interval
        timestamp start_at
        timestamp next_expires_at
        varchar status
        varchar charge_id
        varchar domain "unique"
        timestamp created_at
        timestamp updated_at
    }
    wr_theme_category {
        timestamp created_at
        timestamp updated_at
        bigint theme_id
        bigint category_id
    }
    wr_theme_package {
        timestamp created_at
        timestamp updated_at
        bigint theme_id
        bigint package_id
    }
    wr_themes {
        bigint id PK
        varchar name
        varchar image
        varchar preview_url
        varchar database_file
        bigint source_code_id "FK"
        timestamp created_at
        timestamp updated_at
    }
    wr_websites {
        bigint id PK
        bigint customer_id "FK"
        bigint subscription_id "FK"
        bigint theme_id "FK"
        bigint source_code_id "FK"
        varchar domain "unique"
        varchar status
        timestamp created_at
        timestamp updated_at
    }

    %% Relationships

    %% Customer relationships
    wr_customers ||--o{ wr_subscriptions : "subscriptions"
    wr_customers ||--o{ wr_websites : "websites"

    %% Package relationships
    wr_packages ||--o{ wr_package_prices : "packagePrices"
    wr_packages ||--o{ wr_subscriptions : "subscriptions"

    %% SubscriptionPeriod relationships
    wr_subscription_periods ||--o{ wr_package_prices : "packagePrices"
    wr_subscription_periods ||--o{ wr_subscriptions : "subscriptions"

    %% PackagePrice relationships
    wr_package_prices ||--o{ wr_subscriptions : "subscriptions"
    wr_package_prices }o--|| wr_packages : "package"
    wr_package_prices }o--|| wr_subscription_periods : "subscriptionPeriod"

    %% Subscription relationships
    wr_subscriptions ||--o{ wr_websites : "websites"
    wr_subscriptions }o--|| wr_customers : "customer"
    wr_subscriptions }o--|| wr_themes : "theme"
    wr_subscriptions }o--|| wr_packages : "package"
    wr_subscriptions }o--|| wr_package_prices : "packagePrice"
    wr_subscriptions }o--|| wr_subscription_periods : "subscriptionPeriod"

    %% SourceCode relationships
    wr_source_codes ||--o{ wr_themes : "themes"
    wr_source_codes ||--o{ wr_websites : "websites"

    %% Theme relationships
    wr_themes }o--|| wr_source_codes : "sourceCode"
    wr_themes ||--o{ wr_websites : "websites"
    wr_themes ||--o{ wr_subscriptions : "subscriptions"

    %% Website relationships
    wr_websites }o--|| wr_customers : "customer"
    wr_websites }o--|| wr_subscriptions : "subscription"
    wr_websites }o--|| wr_themes : "theme"
    wr_websites }o--|| wr_source_codes : "sourceCode"

    %% Many-to-Many relationships (through pivot tables)
    wr_themes ||--o{ wr_theme_package : "packages"
    wr_packages ||--o{ wr_theme_package : "themes"
    wr_theme_package }o--|| wr_themes : "theme"
    wr_theme_package }o--|| wr_packages : "package"

    wr_themes ||--o{ wr_theme_category : "categories"
    wr_categories ||--o{ wr_theme_category : "themes"
    wr_theme_category }o--|| wr_themes : "theme"
    wr_theme_category }o--|| wr_categories : "category"
